--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Python
-__pycache__/
+__pycache__
 .ipynb_checkpoints
 
 # Models
@@ -9,6 +9,9 @@ __pycache__/
 model.*
 
 # Big Files
+wikidata_entity_cache.p
+WTR_non_filtered_non_annotated.csv
 text_extraction/reference_html_as_sentences_df.csv
+textual_entailment/data.tar.gz
 textual_entailment/data/support_data_v1/train_wikidecoded.csv
 textual_entailment/support_classification/data/support_train_old.csv
