--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,19 @@
+#old files
+*_old.*
+
 # Python
 __pycache__
 .ipynb_checkpoints
 
-# Models
-*.ckpt
-*.bin
-*.pt
-model.*
+#data
+data/wikidata_entity_cache.p
+data/WTR_non_filtered_non_annotated.csv
 
-# Big Files
-wikidata_entity_cache.p
-WTR_non_filtered_non_annotated.csv
+#text_extraction
 text_extraction/reference_html_as_sentences_df.csv
 
-textual_entailment/data.tar.gz
-textual_entailment/data/support_data_v1/train_wikidecoded.csv
-textual_entailment/support_classification/data/support_train_old.csv
+#verbalisation
+verbalisation/graph2text/outputs/t5-base_13881/best_tfmr/pytorch_model.bin
+verbalisation/graph2text/outputs/t5-base_13881/val_avg_bleu=68.1000-step_count=5.ckpt
+verbalisation.log
+
